// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`azure-resource-visualizer - Trigger Tests Trigger Keywords Snapshot skill description triggers match snapshot 1`] = `
{
  "description": "Analyze Azure resource groups and generate detailed Mermaid architecture diagrams showing the relationships between individual resources. WHEN: create architecture diagram, visualize Azure resources, show resource relationships, generate Mermaid diagram, analyze resource group, diagram my resources, architecture visualization, resource topology, map Azure infrastructure.",
  "extractedKeywords": [
    "aks",
    "analyze",
    "app service",
    "architecture",
    "azure",
    "between",
    "cli",
    "create",
    "detailed",
    "diagram",
    "diagrams",
    "function",
    "generate",
    "group",
    "groups",
    "identity",
    "individual",
    "infrastructure",
    "key vault",
    "mcp",
    "mermaid",
    "monitor",
    "rbac",
    "relationships",
    "resource",
    "resources",
    "security",
    "show",
    "showing",
    "sql",
    "storage",
    "topology",
    "visualization",
    "visualize",
    "visualizer",
    "vnet",
    "when",
  ],
  "name": "azure-resource-visualizer",
}
`;

exports[`azure-resource-visualizer - Trigger Tests Trigger Keywords Snapshot skill keywords match snapshot 1`] = `
[
  "aks",
  "analyze",
  "app service",
  "architecture",
  "azure",
  "between",
  "cli",
  "create",
  "detailed",
  "diagram",
  "diagrams",
  "function",
  "generate",
  "group",
  "groups",
  "identity",
  "individual",
  "infrastructure",
  "key vault",
  "mcp",
  "mermaid",
  "monitor",
  "rbac",
  "relationships",
  "resource",
  "resources",
  "security",
  "show",
  "showing",
  "sql",
  "storage",
  "topology",
  "visualization",
  "visualize",
  "visualizer",
  "vnet",
  "when",
]
`;
